# ai-coding-rules

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENT_PLAN.md  LICENSE  PRE_COMMIT_RULES.md  README.cn.md  README.md  pyproject.toml
.concise-rules/: README.md
.concise-rules/ide-layer/: 01-general.md  01-general.mdc  02-testing.md  02-testing.mdc  03-security.md  03-security.mdc  04-ai-behavior.md  04-ai-behavior.mdc  05-git-repository.md  05-git-repository.mdc  06-memory-tools.mdc  07-ast-grep.mdc  08-development-workflow.mdc  09-search-optimization.mdc  10-documentation.mdc  11-project-management.mdc  12-ai-agent-roles.mdc
.concise-rules/project-templates/golang-app/: 01-golang-basics.mdc  (+2 more)
.cursor/coderules/: meta-rules.md
.cursor/commands/: genrule.md
.cursor/rules/: 01-python-basics.mdc  02-fastapi-schema.mdc  meta-rules.md  meta-rules.mdc
.github/workflows/: lint-markdown.yml  pr-quality-gate.yml
docs/: README.md  ai-coding-tools.md  ai-tools-compatibility.md  ide-layer-alwaysapply-analysis.md  mdc-conditional-mode-analysis.md  mdc-frontmatter-spec.md  rule-writing-guide.md  scripts-usage.md  tech-stack-recommendation.md  vibe-coding-tools.md
full-rules/ide-layer/: README.md
ide-layer/: README.md
ide-layer/rulesets/: 03-security.md  04-ai-behavior.md
scripts/: calculate-tokens.py  format-md.py  generate-pr-report.py  lint-md.py  lint-rules.py  migrate-to-mdc.py  validate-mdc.py
tests/: README.md  test_format_md.py  test_lint_md.py
(+89 files in other folders)
