[project]
name = "vibe-coding-tools"
version = "0.1.0"
description = "AI Coding Rules automation tools"
requires-python = ">=3.10"
dependencies = [
    "pre-commit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

